# micromath

./: .travis.yml  CHANGELOG.md  CHANGES.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: CI.yml  rust.yml
examples/benchmark_teensy40/: Cargo.toml  README.md  run.py
examples/benchmark_teensy40/.cargo/: config.toml
examples/benchmark_teensy40/src/: main.rs  run_bench.rs  uart_writer.rs
src/: f32ext.rs  float.rs  lib.rs  quaternion.rs  statistics.rs  vector.rs
src/f32ext/: abs.rs  acos.rs  asin.rs  atan.rs  atan2.rs  ceil.rs  copysign.rs  cos.rs  div_euclid.rs  exp.rs  floor.rs  fract.rs  hypot.rs  inv.rs  invsqrt.rs  ln.rs  log.rs  log10.rs  log2.rs  powf.rs  powi.rs  radians.rs  rem_euclid.rs  round.rs  sin.rs  sqrt.rs  tan.rs  trunc.rs  utils.rs
src/float/: abs.rs  acos.rs  asin.rs  atan.rs  atan2.rs  ceil.rs  copysign.rs  cos.rs  cosh.rs  div_euclid.rs  exp.rs  floor.rs  fract.rs  hypot.rs  inv.rs  invsqrt.rs  ln.rs  log.rs  log10.rs  log2.rs  mul_add.rs  powf.rs  powi.rs  recip.rs  rem_euclid.rs  round.rs  signum.rs  sin.rs  sin_cos.rs  sqrt.rs  tan.rs  trunc.rs  utils.rs
src/statistics/: trim.rs
src/vector/: commutative.rs  component.rs  iter.rs  vector2d.rs  vector3d.rs  xy.rs  xyz.rs
