[package]
name        = "micromath"
version     = "0.5.0" # Also update html_root_url in lib.rs when bumping this
description = """
Embedded-friendly math library featuring fast floating point approximations
(with small code size) for common arithmetic operations, trigonometry,
2D/3D vector types, statistical analysis, and quaternions.
Optimizes for performance and small code size at the cost of precision.
"""
authors     = ["Tony Arcieri <bascule@gmail.com>"]
license     = "Apache-2.0 OR MIT"
repository  = "https://github.com/NeoBirth/micromath"
readme      = "README.md"
edition     = "2018"
categories  = ["embedded", "science", "no-std"]
keywords    = ["math", "quaternions", "statistics", "trigonometry", "vector"]

[badges]
maintenance = { status = "passively-maintained" }

[dependencies.generic-array]
version = "0.13"
optional = true
default-features = false

[features]
quaternion = []
statistics = []
vector = ["generic-array"]

[package.metadata.docs.rs]
all-features = true
