[package]
name        = "micromath"
version     = "1.1.1" # Also update html_root_url in lib.rs when bumping this
description = """
Embedded-friendly math library featuring fast floating point approximations
(with small code size) for common arithmetic operations, trigonometry,
2D/3D vector types, statistical analysis, and quaternions.
Optimizes for performance and small code size at the cost of precision.
"""
authors     = ["Tony Arcieri <bascule@gmail.com>"]
license     = "Apache-2.0 OR MIT"
repository  = "https://github.com/tarcieri/micromath"
readme      = "README.md"
edition     = "2018"
categories  = ["embedded", "mathematics", "science", "no-std"]
keywords    = ["math", "quaternions", "statistics", "trigonometry", "vector"]

[dependencies.generic-array]
version = "0.14"
optional = true
default-features = false

[features]
quaternion = []
statistics = []
vector = ["generic-array"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
